--- a/HTML/index.html
+++ b/HTML/index.html
@@ -25,6 +25,18 @@
              </div>
         </div>
         <img src="/src/image-removebg-preview.png" alt="Foto logo">
+        <a href="mailto:sayurimo@gmail.com?subject=Contato&body=Olá, gostaria de mais informações.">
+            <img src="/src/e-mail.png" alt="email">
+        </a>
+        <a href="tel:+5515981453091">
+            <img src="/src/chamada-telefonica.png" alt="telefone">
+        </a>
+        <a href="https://www.google.com/maps/search/?api=1&query=Rua+Alice+Garcia+da+Silva,+380+B14+-+19" target="_blank">
+            <img src="/src/localizacao.png" alt="endereço"> 
+        </a>
+        <a href="https://www.instagram.com/seu_usuario/" target="_blank">
+            <img src="/src/instagram.png" alt="Instagram">
+        </a>
     </header>
     
  </body>
