Projeto - Finalizado dia 02/10

--- a/HTML/perfil.html
+++ b/HTML/perfil.html
@@ -7,7 +7,35 @@
 </head>
 <body>
     <header>
-        
+        <img src="/src/image-removebg-preview.png" alt="Sayuri's Brigadeiros" class="Foto Logo">
+
     </header>
+
+    <!-- LOGIN -->
+    <main>
+        <section class="box-login">
+            <div id="login" class="form-content-ativo">
+                <h5> Login </h5>
+                <img src="/src/perfilicon.png" alt="Profile" class="icon-profile">
+                <form>
+                    <input type="email" placeholder="E-mail">
+                    <input type="password" placeholder="Senha">
+                    <button id="enviar-btn1" type="submit">Enviar</button>
+                    <p> Não tem conta? <a href="#" onclick="paginaCadastro()">Login</a></p>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <!-- CADASTRO -->
+    <main>
+        <section class="box-register">
+            <div id="register" class="form-content">
+                <h5> Cadastre-se </h5>
+                <img src="/src/perfilicon.png" alt="Profile" class="icon-profile">
+                <form>
+                    <input type="text" placeholder="Nome completo">
+                    <input type="email" placeholder="E-mail">
+                    <
 </body>
 </html>
